--- a/assets/css/admin-bio.css
+++ b/assets/css/admin-bio.css
@@ -28,17 +28,6 @@
     .bio-control {
       text-align: center;
     }
-    .btn-tambah, .btn-tambah:active, .btn-tambah:focus {
-      text-transform: uppercase;
-      background-color: #e74f36;
-      color: #fff;
-      margin-bottom: 1em;
-    }
-    .btn-tambah:hover {
-      color: #e74f36;
-      background-color: #fff;
-      border: 1px solid #e74f36;
-    }
     .control {
       padding-left: .6em;
       text-align: left;
@@ -49,6 +38,9 @@
     .control li {
       list-style-type: none;
       margin-bottom: .4em;
+    }
+    .control li a {
+      color: #333;
     }
     .control li i {
       margin-right: .4em;
@@ -66,7 +58,13 @@
     .profil-setting li {
       list-style-type: none;
       text-align: left;
-      margin-bottom: .5em;
+      margin-bottom: .4em;
+    }
+    .profil-setting li a {
+      color: #333;
+    }
+    .profil-setting li a:hover {
+      text-decoration: none;
     }
     .profil-setting li i {
       margin-right: .4em;
